parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RCONTINUE
    RLENGTH
    RREAD
    RRETURN
    RROUND
    RTOLOWER
    RTOUPPER
    RTRUNCATE
    RTYPEOF

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr finins
Rule 5     instruccion -> declaracion_instr finins
Rule 6     instruccion -> declaracion_instr2 finins
Rule 7     instruccion -> asignacion_instr finins
Rule 8     instruccion -> asignacion2_instr finins
Rule 9     instruccion -> if_instr
Rule 10    instruccion -> switch_instr
Rule 11    instruccion -> while_instr
Rule 12    instruccion -> break_instr finins
Rule 13    instruccion -> for_instr
Rule 14    instruccion -> main_instr
Rule 15    instruccion -> funcion_instr
Rule 16    instruccion -> llamada_instr finins
Rule 17    finins -> PUNTOCOMA
Rule 18    finins -> <empty>
Rule 19    instruccion -> error PUNTOCOMA
Rule 20    imprimir_instr -> RPRINT PARA expresion PARC
Rule 21    declaracion_instr -> tipo ID IGUAL expresion
Rule 22    declaracion_instr2 -> tipo ID
Rule 23    asignacion_instr -> ID IGUAL expresion
Rule 24    asignacion2_instr -> ID MASMAS
Rule 25    asignacion2_instr -> ID MENOSMENOS
Rule 26    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 27    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
Rule 28    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
Rule 29    switch_instr -> RSWITCH PARA expresion PARC LLAVEA lista_case RDEFAULT DOSPUNTOS instrucciones LLAVEC
Rule 30    switch_instr -> RSWITCH PARA expresion PARC LLAVEA lista_case LLAVEC
Rule 31    switch_instr -> RSWITCH PARA expresion PARC LLAVEA RDEFAULT DOSPUNTOS instrucciones LLAVEC
Rule 32    lista_case -> lista_case case_instrucciones
Rule 33    lista_case -> case_instrucciones
Rule 34    case_instrucciones -> RCASE expresion DOSPUNTOS instrucciones
Rule 35    for_instr -> RFOR PARA asignacion_instr PUNTOCOMA expresion PUNTOCOMA asignacion2_instr PARC LLAVEA instrucciones LLAVEC
Rule 36    for_instr -> RFOR PARA declaracion_for PUNTOCOMA expresion PUNTOCOMA asignacion2_instr PARC LLAVEA instrucciones LLAVEC
Rule 37    declaracion_for -> tipo_declaracion_for ID IGUAL expresion
Rule 38    tipo_declaracion_for -> RINT
Rule 39    tipo_declaracion_for -> RVAR
Rule 40    while_instr -> RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 41    break_instr -> RBREAK
Rule 42    main_instr -> RMAIN PARA PARC LLAVEA instrucciones LLAVEC
Rule 43    funcion_instr -> RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
Rule 44    llamada_instr -> ID PARA PARC
Rule 45    tipo -> RINT
Rule 46    tipo -> RDOUBLE
Rule 47    tipo -> RSTRING
Rule 48    tipo -> RBOOLEAN
Rule 49    tipo -> RCHAR
Rule 50    tipo -> RVAR
Rule 51    expresion -> expresion MAS expresion
Rule 52    expresion -> expresion MENOS expresion
Rule 53    expresion -> expresion POR expresion
Rule 54    expresion -> expresion DIV expresion
Rule 55    expresion -> expresion POT expresion
Rule 56    expresion -> expresion MOD expresion
Rule 57    expresion -> expresion MENORQUE expresion
Rule 58    expresion -> expresion MAYORQUE expresion
Rule 59    expresion -> expresion IGUALIGUAL expresion
Rule 60    expresion -> expresion DIFERENTE expresion
Rule 61    expresion -> expresion MENORIGUAL expresion
Rule 62    expresion -> expresion MAYORIGUAL expresion
Rule 63    expresion -> expresion AND expresion
Rule 64    expresion -> expresion OR expresion
Rule 65    expresion -> expresion MASMAS
Rule 66    expresion -> expresion MENOSMENOS
Rule 67    expresion -> MENOS expresion
Rule 68    expresion -> NOT expresion
Rule 69    expresion -> PARA expresion PARC
Rule 70    expresion -> ID
Rule 71    expresion -> ENTERO
Rule 72    expresion -> DECIMAL
Rule 73    expresion -> CADENA
Rule 74    expresion -> BOOLEANO
Rule 75    expresion -> CARACTER
Rule 76    expresion -> RNULL

Terminals, with rules where they appear

AND                  : 63
BOOLEANO             : 74
CADENA               : 73
CARACTER             : 75
DECIMAL              : 72
DIFERENTE            : 60
DIV                  : 54
DOSPUNTOS            : 29 31 34
ENTERO               : 71
ID                   : 21 22 23 24 25 37 43 44 70
IGUAL                : 21 23 37
IGUALIGUAL           : 59
LLAVEA               : 26 27 27 28 29 30 31 35 36 40 42 43
LLAVEC               : 26 27 27 28 29 30 31 35 36 40 42 43
MAS                  : 51
MASMAS               : 24 65
MAYORIGUAL           : 62
MAYORQUE             : 58
MENORIGUAL           : 61
MENORQUE             : 57
MENOS                : 52 67
MENOSMENOS           : 25 66
MOD                  : 56
NOT                  : 68
OR                   : 64
PARA                 : 20 26 27 28 29 30 31 35 36 40 42 43 44 69
PARC                 : 20 26 27 28 29 30 31 35 36 40 42 43 44 69
POR                  : 53
POT                  : 55
PUNTOCOMA            : 17 19 35 35 36 36
RBOOLEAN             : 48
RBREAK               : 41
RCASE                : 34
RCHAR                : 49
RCONTINUE            : 
RDEFAULT             : 29 31
RDOUBLE              : 46
RELSE                : 27 28
RFOR                 : 35 36
RFUNC                : 43
RIF                  : 26 27 28
RINT                 : 38 45
RLENGTH              : 
RMAIN                : 42
RNULL                : 76
RPRINT               : 20
RREAD                : 
RRETURN              : 
RROUND               : 
RSTRING              : 47
RSWITCH              : 29 30 31
RTOLOWER             : 
RTOUPPER             : 
RTRUNCATE            : 
RTYPEOF              : 
RVAR                 : 39 50
RWHILE               : 40
error                : 19

Nonterminals, with rules where they appear

asignacion2_instr    : 8 35 36
asignacion_instr     : 7 35
break_instr          : 12
case_instrucciones   : 32 33
declaracion_for      : 36
declaracion_instr    : 5
declaracion_instr2   : 6
expresion            : 20 21 23 26 27 28 29 30 31 34 35 36 37 40 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 66 67 68 69
finins               : 4 5 6 7 8 12 16
for_instr            : 13
funcion_instr        : 15
if_instr             : 9 28
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 26 27 27 28 29 31 34 35 36 40 42 43
lista_case           : 29 30 32
llamada_instr        : 16
main_instr           : 14
switch_instr         : 10
tipo                 : 21 22
tipo_declaracion_for : 37
while_instr          : 11

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . declaracion_instr2 finins
    (7) instruccion -> . asignacion_instr finins
    (8) instruccion -> . asignacion2_instr finins
    (9) instruccion -> . if_instr
    (10) instruccion -> . switch_instr
    (11) instruccion -> . while_instr
    (12) instruccion -> . break_instr finins
    (13) instruccion -> . for_instr
    (14) instruccion -> . main_instr
    (15) instruccion -> . funcion_instr
    (16) instruccion -> . llamada_instr finins
    (19) instruccion -> . error PUNTOCOMA
    (20) imprimir_instr -> . RPRINT PARA expresion PARC
    (21) declaracion_instr -> . tipo ID IGUAL expresion
    (22) declaracion_instr2 -> . tipo ID
    (23) asignacion_instr -> . ID IGUAL expresion
    (24) asignacion2_instr -> . ID MASMAS
    (25) asignacion2_instr -> . ID MENOSMENOS
    (26) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (27) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (28) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (29) switch_instr -> . RSWITCH PARA expresion PARC LLAVEA lista_case RDEFAULT DOSPUNTOS instrucciones LLAVEC
    (30) switch_instr -> . RSWITCH PARA expresion PARC LLAVEA lista_case LLAVEC
    (31) switch_instr -> . RSWITCH PARA expresion PARC LLAVEA RDEFAULT DOSPUNTOS instrucciones LLAVEC
    (40) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (41) break_instr -> . RBREAK
    (35) for_instr -> . RFOR PARA asignacion_instr PUNTOCOMA expresion PUNTOCOMA asignacion2_instr PARC LLAVEA instrucciones LLAVEC
    (36) for_instr -> . RFOR PARA declaracion_for PUNTOCOMA expresion PUNTOCOMA asignacion2_instr PARC LLAVEA instrucciones LLAVEC
    (42) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (43) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (44) llamada_instr -> . ID PARA PARC
    (45) tipo -> . RINT
    (46) tipo -> . RDOUBLE
    (47) tipo -> . RSTRING
    (48) tipo -> . RBOOLEAN
    (49) tipo -> . RCHAR
    (50) tipo -> . RVAR

    error           shift and go to state 17
    RPRINT          shift and go to state 18
    ID              shift and go to state 20
    RIF             shift and go to state 21
    RSWITCH         shift and go to state 22
    RWHILE          shift and go to state 23
    RBREAK          shift and go to state 24
    RFOR            shift and go to state 25
    RMAIN           shift and go to state 26
    RFUNC           shift and go to state 27
    RINT            shift and go to state 28
    RDOUBLE         shift and go to state 29
    RSTRING         shift and go to state 30
    RBOOLEAN        shift and go to state 31
    RCHAR           shift and go to state 32
    RVAR            shift and go to state 33

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    declaracion_instr2             shift and go to state 6
    asignacion_instr               shift and go to state 7
    asignacion2_instr              shift and go to state 8
    if_instr                       shift and go to state 9
    switch_instr                   shift and go to state 10
    while_instr                    shift and go to state 11
    break_instr                    shift and go to state 12
    for_instr                      shift and go to state 13
    main_instr                     shift and go to state 14
    funcion_instr                  shift and go to state 15
    llamada_instr                  shift and go to state 16
    tipo                           shift and go to state 19

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . declaracion_instr2 finins
    (7) instruccion -> . asignacion_instr finins
    (8) instruccion -> . asignacion2_instr finins
    (9) instruccion -> . if_instr
    (10) instruccion -> . switch_instr
    (11) instruccion -> . while_instr
    (12) instruccion -> . break_instr finins
    (13) instruccion -> . for_instr
    (14) instruccion -> . main_instr
    (15) instruccion -> . funcion_instr
    (16) instruccion -> . llamada_instr finins
    (19) instruccion -> . error PUNTOCOMA
    (20) imprimir_instr -> . RPRINT PARA expresion PARC
    (21) declaracion_instr -> . tipo ID IGUAL expresion
    (22) declaracion_instr2 -> . tipo ID
    (23) asignacion_instr -> . ID IGUAL expresion
    (24) asignacion2_instr -> . ID MASMAS
    (25) asignacion2_instr -> . ID MENOSMENOS
    (26) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (27) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (28) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (29) switch_instr -> . RSWITCH PARA expresion PARC LLAVEA lista_case RDEFAULT DOSPUNTOS instrucciones LLAVEC
    (30) switch_instr -> . RSWITCH PARA expresion PARC LLAVEA lista_case LLAVEC
    (31) switch_instr -> . RSWITCH PARA expresion PARC LLAVEA RDEFAULT DOSPUNTOS instrucciones LLAVEC
    (40) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (41) break_instr -> . RBREAK
    (35) for_instr -> . RFOR PARA asignacion_instr PUNTOCOMA expresion PUNTOCOMA asignacion2_instr PARC LLAVEA instrucciones LLAVEC
    (36) for_instr -> . RFOR PARA declaracion_for PUNTOCOMA expresion PUNTOCOMA asignacion2_instr PARC LLAVEA instrucciones LLAVEC
    (42) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (43) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (44) llamada_instr -> . ID PARA PARC
    (45) tipo -> . RINT
    (46) tipo -> . RDOUBLE
    (47) tipo -> . RSTRING
    (48) tipo -> . RBOOLEAN
    (49) tipo -> . RCHAR
    (50) tipo -> . RVAR

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 17
    RPRINT          shift and go to state 18
    ID              shift and go to state 20
    RIF             shift and go to state 21
    RSWITCH         shift and go to state 22
    RWHILE          shift and go to state 23
    RBREAK          shift and go to state 24
    RFOR            shift and go to state 25
    RMAIN           shift and go to state 26
    RFUNC           shift and go to state 27
    RINT            shift and go to state 28
    RDOUBLE         shift and go to state 29
    RSTRING         shift and go to state 30
    RBOOLEAN        shift and go to state 31
    RCHAR           shift and go to state 32
    RVAR            shift and go to state 33

    instruccion                    shift and go to state 34
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    declaracion_instr2             shift and go to state 6
    asignacion_instr               shift and go to state 7
    asignacion2_instr              shift and go to state 8
    if_instr                       shift and go to state 9
    switch_instr                   shift and go to state 10
    while_instr                    shift and go to state 11
    break_instr                    shift and go to state 12
    for_instr                      shift and go to state 13
    main_instr                     shift and go to state 14
    funcion_instr                  shift and go to state 15
    llamada_instr                  shift and go to state 16
    tipo                           shift and go to state 19

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RSWITCH         reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RMAIN           reduce using rule 3 (instrucciones -> instruccion .)
    RFUNC           reduce using rule 3 (instrucciones -> instruccion .)
    RINT            reduce using rule 3 (instrucciones -> instruccion .)
    RDOUBLE         reduce using rule 3 (instrucciones -> instruccion .)
    RSTRING         reduce using rule 3 (instrucciones -> instruccion .)
    RBOOLEAN        reduce using rule 3 (instrucciones -> instruccion .)
    RCHAR           reduce using rule 3 (instrucciones -> instruccion .)
    RVAR            reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)
    RDEFAULT        reduce using rule 3 (instrucciones -> instruccion .)
    RCASE           reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr . finins
    (17) finins -> . PUNTOCOMA
    (18) finins -> .

    PUNTOCOMA       shift and go to state 36
    error           reduce using rule 18 (finins -> .)
    RPRINT          reduce using rule 18 (finins -> .)
    ID              reduce using rule 18 (finins -> .)
    RIF             reduce using rule 18 (finins -> .)
    RSWITCH         reduce using rule 18 (finins -> .)
    RWHILE          reduce using rule 18 (finins -> .)
    RBREAK          reduce using rule 18 (finins -> .)
    RFOR            reduce using rule 18 (finins -> .)
    RMAIN           reduce using rule 18 (finins -> .)
    RFUNC           reduce using rule 18 (finins -> .)
    RINT            reduce using rule 18 (finins -> .)
    RDOUBLE         reduce using rule 18 (finins -> .)
    RSTRING         reduce using rule 18 (finins -> .)
    RBOOLEAN        reduce using rule 18 (finins -> .)
    RCHAR           reduce using rule 18 (finins -> .)
    RVAR            reduce using rule 18 (finins -> .)
    $end            reduce using rule 18 (finins -> .)
    LLAVEC          reduce using rule 18 (finins -> .)
    RDEFAULT        reduce using rule 18 (finins -> .)
    RCASE           reduce using rule 18 (finins -> .)

    finins                         shift and go to state 35

state 5

    (5) instruccion -> declaracion_instr . finins
    (17) finins -> . PUNTOCOMA
    (18) finins -> .

    PUNTOCOMA       shift and go to state 36
    error           reduce using rule 18 (finins -> .)
    RPRINT          reduce using rule 18 (finins -> .)
    ID              reduce using rule 18 (finins -> .)
    RIF             reduce using rule 18 (finins -> .)
    RSWITCH         reduce using rule 18 (finins -> .)
    RWHILE          reduce using rule 18 (finins -> .)
    RBREAK          reduce using rule 18 (finins -> .)
    RFOR            reduce using rule 18 (finins -> .)
    RMAIN           reduce using rule 18 (finins -> .)
    RFUNC           reduce using rule 18 (finins -> .)
    RINT            reduce using rule 18 (finins -> .)
    RDOUBLE         reduce using rule 18 (finins -> .)
    RSTRING         reduce using rule 18 (finins -> .)
    RBOOLEAN        reduce using rule 18 (finins -> .)
    RCHAR           reduce using rule 18 (finins -> .)
    RVAR            reduce using rule 18 (finins -> .)
    $end            reduce using rule 18 (finins -> .)
    LLAVEC          reduce using rule 18 (finins -> .)
    RDEFAULT        reduce using rule 18 (finins -> .)
    RCASE           reduce using rule 18 (finins -> .)

    finins                         shift and go to state 37

state 6

    (6) instruccion -> declaracion_instr2 . finins
    (17) finins -> . PUNTOCOMA
    (18) finins -> .

    PUNTOCOMA       shift and go to state 36
    error           reduce using rule 18 (finins -> .)
    RPRINT          reduce using rule 18 (finins -> .)
    ID              reduce using rule 18 (finins -> .)
    RIF             reduce using rule 18 (finins -> .)
    RSWITCH         reduce using rule 18 (finins -> .)
    RWHILE          reduce using rule 18 (finins -> .)
    RBREAK          reduce using rule 18 (finins -> .)
    RFOR            reduce using rule 18 (finins -> .)
    RMAIN           reduce using rule 18 (finins -> .)
    RFUNC           reduce using rule 18 (finins -> .)
    RINT            reduce using rule 18 (finins -> .)
    RDOUBLE         reduce using rule 18 (finins -> .)
    RSTRING         reduce using rule 18 (finins -> .)
    RBOOLEAN        reduce using rule 18 (finins -> .)
    RCHAR           reduce using rule 18 (finins -> .)
    RVAR            reduce using rule 18 (finins -> .)
    $end            reduce using rule 18 (finins -> .)
    LLAVEC          reduce using rule 18 (finins -> .)
    RDEFAULT        reduce using rule 18 (finins -> .)
    RCASE           reduce using rule 18 (finins -> .)

    finins                         shift and go to state 38

state 7

    (7) instruccion -> asignacion_instr . finins
    (17) finins -> . PUNTOCOMA
    (18) finins -> .

    PUNTOCOMA       shift and go to state 36
    error           reduce using rule 18 (finins -> .)
    RPRINT          reduce using rule 18 (finins -> .)
    ID              reduce using rule 18 (finins -> .)
    RIF             reduce using rule 18 (finins -> .)
    RSWITCH         reduce using rule 18 (finins -> .)
    RWHILE          reduce using rule 18 (finins -> .)
    RBREAK          reduce using rule 18 (finins -> .)
    RFOR            reduce using rule 18 (finins -> .)
    RMAIN           reduce using rule 18 (finins -> .)
    RFUNC           reduce using rule 18 (finins -> .)
    RINT            reduce using rule 18 (finins -> .)
    RDOUBLE         reduce using rule 18 (finins -> .)
    RSTRING         reduce using rule 18 (finins -> .)
    RBOOLEAN        reduce using rule 18 (finins -> .)
    RCHAR           reduce using rule 18 (finins -> .)
    RVAR            reduce using rule 18 (finins -> .)
    $end            reduce using rule 18 (finins -> .)
    LLAVEC          reduce using rule 18 (finins -> .)
    RDEFAULT        reduce using rule 18 (finins -> .)
    RCASE           reduce using rule 18 (finins -> .)

    finins                         shift and go to state 39

state 8

    (8) instruccion -> asignacion2_instr . finins
    (17) finins -> . PUNTOCOMA
    (18) finins -> .

    PUNTOCOMA       shift and go to state 36
    error           reduce using rule 18 (finins -> .)
    RPRINT          reduce using rule 18 (finins -> .)
    ID              reduce using rule 18 (finins -> .)
    RIF             reduce using rule 18 (finins -> .)
    RSWITCH         reduce using rule 18 (finins -> .)
    RWHILE          reduce using rule 18 (finins -> .)
    RBREAK          reduce using rule 18 (finins -> .)
    RFOR            reduce using rule 18 (finins -> .)
    RMAIN           reduce using rule 18 (finins -> .)
    RFUNC           reduce using rule 18 (finins -> .)
    RINT            reduce using rule 18 (finins -> .)
    RDOUBLE         reduce using rule 18 (finins -> .)
    RSTRING         reduce using rule 18 (finins -> .)
    RBOOLEAN        reduce using rule 18 (finins -> .)
    RCHAR           reduce using rule 18 (finins -> .)
    RVAR            reduce using rule 18 (finins -> .)
    $end            reduce using rule 18 (finins -> .)
    LLAVEC          reduce using rule 18 (finins -> .)
    RDEFAULT        reduce using rule 18 (finins -> .)
    RCASE           reduce using rule 18 (finins -> .)

    finins                         shift and go to state 40

state 9

    (9) instruccion -> if_instr .

    error           reduce using rule 9 (instruccion -> if_instr .)
    RPRINT          reduce using rule 9 (instruccion -> if_instr .)
    ID              reduce using rule 9 (instruccion -> if_instr .)
    RIF             reduce using rule 9 (instruccion -> if_instr .)
    RSWITCH         reduce using rule 9 (instruccion -> if_instr .)
    RWHILE          reduce using rule 9 (instruccion -> if_instr .)
    RBREAK          reduce using rule 9 (instruccion -> if_instr .)
    RFOR            reduce using rule 9 (instruccion -> if_instr .)
    RMAIN           reduce using rule 9 (instruccion -> if_instr .)
    RFUNC           reduce using rule 9 (instruccion -> if_instr .)
    RINT            reduce using rule 9 (instruccion -> if_instr .)
    RDOUBLE         reduce using rule 9 (instruccion -> if_instr .)
    RSTRING         reduce using rule 9 (instruccion -> if_instr .)
    RBOOLEAN        reduce using rule 9 (instruccion -> if_instr .)
    RCHAR           reduce using rule 9 (instruccion -> if_instr .)
    RVAR            reduce using rule 9 (instruccion -> if_instr .)
    $end            reduce using rule 9 (instruccion -> if_instr .)
    LLAVEC          reduce using rule 9 (instruccion -> if_instr .)
    RDEFAULT        reduce using rule 9 (instruccion -> if_instr .)
    RCASE           reduce using rule 9 (instruccion -> if_instr .)


state 10

    (10) instruccion -> switch_instr .

    error           reduce using rule 10 (instruccion -> switch_instr .)
    RPRINT          reduce using rule 10 (instruccion -> switch_instr .)
    ID              reduce using rule 10 (instruccion -> switch_instr .)
    RIF             reduce using rule 10 (instruccion -> switch_instr .)
    RSWITCH         reduce using rule 10 (instruccion -> switch_instr .)
    RWHILE          reduce using rule 10 (instruccion -> switch_instr .)
    RBREAK          reduce using rule 10 (instruccion -> switch_instr .)
    RFOR            reduce using rule 10 (instruccion -> switch_instr .)
    RMAIN           reduce using rule 10 (instruccion -> switch_instr .)
    RFUNC           reduce using rule 10 (instruccion -> switch_instr .)
    RINT            reduce using rule 10 (instruccion -> switch_instr .)
    RDOUBLE         reduce using rule 10 (instruccion -> switch_instr .)
    RSTRING         reduce using rule 10 (instruccion -> switch_instr .)
    RBOOLEAN        reduce using rule 10 (instruccion -> switch_instr .)
    RCHAR           reduce using rule 10 (instruccion -> switch_instr .)
    RVAR            reduce using rule 10 (instruccion -> switch_instr .)
    $end            reduce using rule 10 (instruccion -> switch_instr .)
    LLAVEC          reduce using rule 10 (instruccion -> switch_instr .)
    RDEFAULT        reduce using rule 10 (instruccion -> switch_instr .)
    RCASE           reduce using rule 10 (instruccion -> switch_instr .)


state 11

    (11) instruccion -> while_instr .

    error           reduce using rule 11 (instruccion -> while_instr .)
    RPRINT          reduce using rule 11 (instruccion -> while_instr .)
    ID              reduce using rule 11 (instruccion -> while_instr .)
    RIF             reduce using rule 11 (instruccion -> while_instr .)
    RSWITCH         reduce using rule 11 (instruccion -> while_instr .)
    RWHILE          reduce using rule 11 (instruccion -> while_instr .)
    RBREAK          reduce using rule 11 (instruccion -> while_instr .)
    RFOR            reduce using rule 11 (instruccion -> while_instr .)
    RMAIN           reduce using rule 11 (instruccion -> while_instr .)
    RFUNC           reduce using rule 11 (instruccion -> while_instr .)
    RINT            reduce using rule 11 (instruccion -> while_instr .)
    RDOUBLE         reduce using rule 11 (instruccion -> while_instr .)
    RSTRING         reduce using rule 11 (instruccion -> while_instr .)
    RBOOLEAN        reduce using rule 11 (instruccion -> while_instr .)
    RCHAR           reduce using rule 11 (instruccion -> while_instr .)
    RVAR            reduce using rule 11 (instruccion -> while_instr .)
    $end            reduce using rule 11 (instruccion -> while_instr .)
    LLAVEC          reduce using rule 11 (instruccion -> while_instr .)
    RDEFAULT        reduce using rule 11 (instruccion -> while_instr .)
    RCASE           reduce using rule 11 (instruccion -> while_instr .)


state 12

    (12) instruccion -> break_instr . finins
    (17) finins -> . PUNTOCOMA
    (18) finins -> .

    PUNTOCOMA       shift and go to state 36
    error           reduce using rule 18 (finins -> .)
    RPRINT          reduce using rule 18 (finins -> .)
    ID              reduce using rule 18 (finins -> .)
    RIF             reduce using rule 18 (finins -> .)
    RSWITCH         reduce using rule 18 (finins -> .)
    RWHILE          reduce using rule 18 (finins -> .)
    RBREAK          reduce using rule 18 (finins -> .)
    RFOR            reduce using rule 18 (finins -> .)
    RMAIN           reduce using rule 18 (finins -> .)
    RFUNC           reduce using rule 18 (finins -> .)
    RINT            reduce using rule 18 (finins -> .)
    RDOUBLE         reduce using rule 18 (finins -> .)
    RSTRING         reduce using rule 18 (finins -> .)
    RBOOLEAN        reduce using rule 18 (finins -> .)
    RCHAR           reduce using rule 18 (finins -> .)
    RVAR            reduce using rule 18 (finins -> .)
    $end            reduce using rule 18 (finins -> .)
    LLAVEC          reduce using rule 18 (finins -> .)
    RDEFAULT        reduce using rule 18 (finins -> .)
    RCASE           reduce using rule 18 (finins -> .)

    finins                         shift and go to state 41

state 13

    (13) instruccion -> for_instr .

    error           reduce using rule 13 (instruccion -> for_instr .)
    RPRINT          reduce using rule 13 (instruccion -> for_instr .)
    ID              reduce using rule 13 (instruccion -> for_instr .)
    RIF             reduce using rule 13 (instruccion -> for_instr .)
    RSWITCH         reduce using rule 13 (instruccion -> for_instr .)
    RWHILE          reduce using rule 13 (instruccion -> for_instr .)
    RBREAK          reduce using rule 13 (instruccion -> for_instr .)
    RFOR            reduce using rule 13 (instruccion -> for_instr .)
    RMAIN           reduce using rule 13 (instruccion -> for_instr .)
    RFUNC           reduce using rule 13 (instruccion -> for_instr .)
    RINT            reduce using rule 13 (instruccion -> for_instr .)
    RDOUBLE         reduce using rule 13 (instruccion -> for_instr .)
    RSTRING         reduce using rule 13 (instruccion -> for_instr .)
    RBOOLEAN        reduce using rule 13 (instruccion -> for_instr .)
    RCHAR           reduce using rule 13 (instruccion -> for_instr .)
    RVAR            reduce using rule 13 (instruccion -> for_instr .)
    $end            reduce using rule 13 (instruccion -> for_instr .)
    LLAVEC          reduce using rule 13 (instruccion -> for_instr .)
    RDEFAULT        reduce using rule 13 (instruccion -> for_instr .)
    RCASE           reduce using rule 13 (instruccion -> for_instr .)


state 14

    (14) instruccion -> main_instr .

    error           reduce using rule 14 (instruccion -> main_instr .)
    RPRINT          reduce using rule 14 (instruccion -> main_instr .)
    ID              reduce using rule 14 (instruccion -> main_instr .)
    RIF             reduce using rule 14 (instruccion -> main_instr .)
    RSWITCH         reduce using rule 14 (instruccion -> main_instr .)
    RWHILE          reduce using rule 14 (instruccion -> main_instr .)
    RBREAK          reduce using rule 14 (instruccion -> main_instr .)
    RFOR            reduce using rule 14 (instruccion -> main_instr .)
    RMAIN           reduce using rule 14 (instruccion -> main_instr .)
    RFUNC           reduce using rule 14 (instruccion -> main_instr .)
    RINT            reduce using rule 14 (instruccion -> main_instr .)
    RDOUBLE         reduce using rule 14 (instruccion -> main_instr .)
    RSTRING         reduce using rule 14 (instruccion -> main_instr .)
    RBOOLEAN        reduce using rule 14 (instruccion -> main_instr .)
    RCHAR           reduce using rule 14 (instruccion -> main_instr .)
    RVAR            reduce using rule 14 (instruccion -> main_instr .)
    $end            reduce using rule 14 (instruccion -> main_instr .)
    LLAVEC          reduce using rule 14 (instruccion -> main_instr .)
    RDEFAULT        reduce using rule 14 (instruccion -> main_instr .)
    RCASE           reduce using rule 14 (instruccion -> main_instr .)


state 15

    (15) instruccion -> funcion_instr .

    error           reduce using rule 15 (instruccion -> funcion_instr .)
    RPRINT          reduce using rule 15 (instruccion -> funcion_instr .)
    ID              reduce using rule 15 (instruccion -> funcion_instr .)
    RIF             reduce using rule 15 (instruccion -> funcion_instr .)
    RSWITCH         reduce using rule 15 (instruccion -> funcion_instr .)
    RWHILE          reduce using rule 15 (instruccion -> funcion_instr .)
    RBREAK          reduce using rule 15 (instruccion -> funcion_instr .)
    RFOR            reduce using rule 15 (instruccion -> funcion_instr .)
    RMAIN           reduce using rule 15 (instruccion -> funcion_instr .)
    RFUNC           reduce using rule 15 (instruccion -> funcion_instr .)
    RINT            reduce using rule 15 (instruccion -> funcion_instr .)
    RDOUBLE         reduce using rule 15 (instruccion -> funcion_instr .)
    RSTRING         reduce using rule 15 (instruccion -> funcion_instr .)
    RBOOLEAN        reduce using rule 15 (instruccion -> funcion_instr .)
    RCHAR           reduce using rule 15 (instruccion -> funcion_instr .)
    RVAR            reduce using rule 15 (instruccion -> funcion_instr .)
    $end            reduce using rule 15 (instruccion -> funcion_instr .)
    LLAVEC          reduce using rule 15 (instruccion -> funcion_instr .)
    RDEFAULT        reduce using rule 15 (instruccion -> funcion_instr .)
    RCASE           reduce using rule 15 (instruccion -> funcion_instr .)


state 16

    (16) instruccion -> llamada_instr . finins
    (17) finins -> . PUNTOCOMA
    (18) finins -> .
